@@ -28,6 +28,10 @@ cupt (0.1.3) UNRELEASED; urgency=low
           per-host settings.
     - Config:
       - Per-host suboption of 'acquire::*::timeout' is now supported.
+    - System:
+      - Worker:
+        - 'do_actions': perform dpkg lock (if needed) before all other
+          prepare actions, not before modifying system.
 
  -- Eugene V. Lyubimkin <jackyf.devel@gmail.com>  Tue, 12 May 2009 23:29:01 +0300
 
